# GPT-2-124M-From-Scratch-Pytorch

./: .gitignore  README.md  arch.drawio  config.py  dataset.py  download_dataset.py  finewebedu.py  main.py  model.py  notebook.ipynb  openwebtext.py  pyproject.toml  requirements.txt  save_checkpoint_hf_hub.py  train.py  utils.py  work.todo
