[project]
name = "gpt-2-124m-from-scratch-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.2",
    "tensorboard>=2.20.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
    "triton-windows>=3.4.0.post20",
]
